--- a/layouts/legal/single.html
+++ b/layouts/legal/single.html
@@ -14,23 +14,16 @@
         Change date 2022.01.01
       </p>
     </div>
-
-    <div class="hero-figure">
-      <img
-          src="https://assets.website-files.com/61e0050d34a36727a19d255b/61e15a0baab6330bd739a5dc_photo-10-p-1080.jpeg"
-          height="600px"
-      >
-    </div>
   </div>
 </div>
 
 <div class="container">
   <div class="fag-item">
     <div class="faq-item-header">
-      <h2>What Is Personal Data at Apple?</h2>
+      <h2>Какие данные мы собираем?</h2>
     </div>
 
-    <div hidden class="faq-item-body">
+    <div class="faq-item-body">
       <p>
         At Apple, we respect your ability to know, access, correct, transfer, restrict the processing of, and delete your personal data. We have provided these rights to our global customer base and if you choose to exercise these privacy rights, you have the right not to be treated in a discriminatory way nor to receive a lesser degree of service from Apple. Where you are requested to consent to the processing of your personal data by Apple, you have the right to withdraw your consent at any time.
       </p>
