--- a/layouts/partials/_default/footer.html
+++ b/layouts/partials/_default/footer.html
@@ -30,7 +30,7 @@
   </div>
 
   <div>
-    <p class="subhead2 mb-1">New South Head Rd, Double Bay NSW 2028, New York</p>
+    <p class="subhead2 mb-1">Liblika 12, 13426 Tallinn, Estonia</p>
     <p class="subhead2">
       <a href="/">{{ .Site.Params.Email }}</a>
     </p>
